<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignupActivity">

    <ImageView
        android:id="@+id/signUpTwitterTitle"
        android:transitionName="quillImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_quillsvgwhite24"
        android:padding="10dp"
        android:paddingEnd="320dp"
        android:paddingStart="20dp"
        android:background="@color/colorPrimary" />

    <EditText
        android:id="@+id/signUpFirstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="text"
        android:layout_below="@+id/signUpTwitterTitle"
        android:hint="@string/firstNamePrompt" />

    <EditText
        android:id="@+id/signUpLastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="text"
        android:layout_below="@+id/signUpFirstNameEditText"
        android:hint="@string/lastNamePrompt" />

    <EditText
        android:id="@+id/signUpUsernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="text"
        android:layout_below="@+id/signUpLastNameEditText"
        android:hint="@string/usernamePrompt" />

    <EditText
        android:id="@+id/signUpPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:layout_below="@+id/signUpUsernameEditText"
        android:hint="@string/passwordPrompt" />

    <Button
        android:id="@+id/signUpTakePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpUploadPhotoButton"
        android:layout_below="@+id/signUpPasswordEditText"
        android:layout_marginStart="30dp"
        />

    <ImageView
        android:id="@+id/signUpCheckmarkImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/signUpPasswordEditText"
        android:layout_toEndOf="@+id/signUpTakePicture"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_check_black_24dp" />


    <Button
        android:id="@+id/signUpButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpButton"
        android:layout_below="@+id/signUpPasswordEditText"
        android:layout_marginEnd="30dp"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>