<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.UserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userTitle"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="16dp"
            android:text="User Info"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/user_activity_userImageShapeLayout"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circular_bordershape">

                <androidx.cardview.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/user_activity_userImageCard"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/colorPrimaryDark"
                    app:cardCornerRadius="37.5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/user_activity_userImage"
                        android:contentDescription="@string/userImageContentDescription"
                        android:scaleType="fitCenter" />
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/user_activity_linearLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/user_activity_userImageShapeLayout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_activity_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/homePageTitle"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/user_activity_userAlias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/homePageTitle"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_activity_lowLinearLay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/user_activity_linearLay"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_activity_followeeCount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="2dp"
                    android:paddingHorizontal="5sp"
                    android:text="@string/followeeCount" />

                <Space
                    android:layout_width="2sp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/user_activity_followerCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:paddingHorizontal="5sp"
                    android:text="@string/followerCount" />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/user_activity_followButton"
            android:text="Follow"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/green"
            app:rippleColor="@color/grey" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/user_activity_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00BCD4"
            app:tabIndicatorColor="@color/colorAccent" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/user_activity_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>